# ememory-backend

./: .env  .gitignore  Dockerfile  pyproject.toml  requirements.txt
src/: manage.py
src/e_memory/: asgi.py  settings.py  urls.py  wsgi.py
src/emauth/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/emauth/migrations/: 0001_initial.py
src/reviews/: admin.py  constants.py  models.py  serializers.py  urls.py  validators.py  views.py
src/reviews/management/commands/: skip_missed_review_schedules.py
src/reviews/migrations/: 0001_initial.py  0002_alter_subject_id.py  0003_alter_subject_color_alter_subject_name_and_more.py  0004_reviewinfo_reviewschedule.py  0005_alter_reviewinfo_notes_alter_reviewinfo_user_and_more.py  0006_alter_reviewinfo_initial_date.py
src/staticfiles/e_memory/css/: base.css  error-page.css
src/staticfiles/e_memory/css/emauth/: password_reset_confirm.css
src/staticfiles/e_memory/js/emauth/: password_reset_confirm.js
src/staticfiles/e_memory/js/utils/: get_cookie.js
src/templates/: 404.html  500.html  base.html
src/templates/base/: base.html  footer.html  header.html
src/templates/emauth/: reset_password.html
